RichtextArea: fix submenu not showing at the right position

--- a/client/django-formset/RichtextArea.scss
+++ b/client/django-formset/RichtextArea.scss
@@ -80,15 +80,17 @@
 					width: max-content;
 					top: 0;
 					left: 0;
+					margin: 0;
 					padding: inherit;
 					list-style: none;
 					background-color: inherit;
-					border-color: black;
+					border-color: $richtext-border-color;
+					box-shadow: $richtext-box-shadow;
 
 					> li {
 						background-color: inherit;
 						opacity: var(--button-opacity);
-						padding: 0 0.5rem;
+						padding: 0.25rem 0.5rem;
 
 						&:hover {
 							opacity: 1;
