--- a/client/django-formset/_colors.scss
+++ b/client/django-formset/_colors.scss
@@ -16,6 +16,8 @@ $richtext-button-opacity: 0.5;
 $richtext-placeholder: rgba(0, 0, 0, 0.2);
 $richtext-code-block: rgba(0, 0, 0, 0.03);
 $richtext-output: rgba(0, 0, 0, 0.7);
+$richtext-border-color: rgba(0, 0, 0, 0.7);
+$richtext-box-shadow: rgba(0, 0, 0, 0.2) 0 0 5px;
 $richtext-footnote-color: rgb(13, 110, 253);
 
 // Calendar
